# pkuphysu-website

./: .eslintrc-auto-import.js  .gitignore  README.md  app.py  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
.husky/: commit-msg
pkuphysu_website/: README.md  __init__.py  tasks.py  utils.py
pkuphysu_website/api/ai_chat/: main.py
pkuphysu_website/api/blogs/: models.py  utils.py  views.py
pkuphysu_website/api/eveparty/: __init__.py  models.py  utils.py  views.py
pkuphysu_website/api/file_upload/: __init__.py  views.py
pkuphysu_website/api/images/: __init__.py  views.py
pkuphysu_website/api/portal/: __init__.py  utils.py  views.py
pkuphysu_website/auth/: __init__.py  models.py  utils.py  view.py  views.py
pkuphysu_website/config/: __init__.py  settings.toml
pkuphysu_website/dba/: views.py
pkuphysu_website/email/: __init__.py  main.py  utils.py
pkuphysu_website/pages/portal/: __init__.py  view.py
pkuphysu_website/pages/random_draw/: __init__.py  models.py  utils.py  view.py
pkuphysu_website/pkuphysu_wechat/: __init__.py  utils.py
pkuphysu_website/pkuphysu_wechat/tasks/: views.py
pkuphysu_website/pkuphysu_wechat/wechat/: __init__.py  commands.py  core.py  handlers.py  models.py  utils.py
pkuphysu_website/static/scripts/: toast.js
pkuphysu_website/static/styles/: invest.css  login.css  main.css  portal.css  toast.css
pkuphysu_website/templates/: admin.html  invest.html  login.html  portal.html  random_draw.html
pkuphysu_website/wechat/: __init__.py  models.py  utils.py  views.py
src/: App.vue  components.d.ts  main.js  style.css
src/api/: api.js
src/components/: CollapsibleDiv.vue  MarkdownEditor-v2.vue  MarkdownEditor.vue  MarkdownRenderer-v1.vue  MarkdownRenderer-v2.vue  MarkdownRenderer-v3.vue  MarkdownRenderer.vue  UserAvatar.vue
src/composables/: theme.js
src/pages/: Article.vue  ArticleCenter.vue  Auth.vue  BlogCenter.vue  EveParty.vue  Home.vue  Posts.vue  Profile.vue  Puzzle.vue  Redirect.vue  Settings.vue  WriteArticle.vue
src/router/: index.js
src/stores/: user.js
src/styles/: arco-palette.css  github-markdown.css  main.css
src/utils/: index.js
(+28 files in other folders)
