[project]
name = "pkuphysu_website"
version = "0.0.0"
description = "PKU Physics Union Website"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pkuphysu_website"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true